# CSP_Project

./: .gitignore  CMakeLists.txt  README.md  build-euler-mpi.sh  build-euler.sh  build-linux.sh  build-unix-ippl.sh  build-unix-mpi.sh  build-unix.sh  build-win.bat  update_branch.sh
MPI/: mpi.h
buildscripts/: build-euler-mpi.sh  build-euler.sh  build-unix-ippl.sh  build-unix-mpi.sh  build-unix.sh
code/: Array.c++  Array.h++  Base.h++  Eigen.c++  Eigen.h++  Heisenberg.c++  Heisenberg.h++  HeisenbergIppl.h++  Lattice3D.c++  Lattice3D.h++  Lattice3d.c++  Lattice3d.h++  LatticeIppl.h++  LatticeSerial.h++  LoadingBar.c++  LoadingBar.h++  RNG.c++  RNG.h++  Spin.c++  Spin.h++  Timekeeper.h++  alloctrack.h++  main.c++
code/Algorithm/: Algorithm.c++  Algorithm.h++
code/Data/: DataHandler.c++  DataHandler.h++  MPI_Helper.c++  MPI_Helper.h++  Plot.c++  Plot.h++
code/Measure/: LoadingBar.c++  LoadingBar.h++  Observables.c++  Observables.h++  Observavles.c++  Timer.c++  Timer.h++
code/Metropolis/: adaptive_metropolis.c++  adaptive_metropolis.h++  energy_diff.c++  energy_diff.h++  metropolis.c++  metropolis.h++  metropolis_omp.c++
code/Ploting/: PlotLattice.c++  PlotLattice.h++
code/Simulations/: Simulation.c++  Simulation.h++
code/Wolf/: wolf.c++  wolf.h++
code/Wolff/: LatticeBool.c++  LatticeBool.h++  duplicate_functions.c++  duplicate_functions.h++  wolff.c++  wolff.h++  wolff_ghost.c++  wolff_ghost.h++  wolff_multicluster_omp.c++  wolff_neighbors_omp.c++  wolff_omp.c++  wolff_shared_stack_omp.c++  wolff_shotgun_omp.c++
code/test/: test.c++
code_ippl/: LatticeIppl.h++
code_ippl/Algorithms/: Ippl_Algorithms.h++  metropolis_ippl.c++
code_parallel/: wolff_ghost.c++
docs/: CodingGuidelines.md  CodingRules.md  Presentation_1
docs/Euler/: error.txt  file.err  file.out  launch.sh  launch1.sh  launch2.sh  launch3.sh  launch4.sh  launch_Heisenberg.sh  launch_Neq.sh  launch_Seed.sh  launch_Speed_Up.sh  launch_Speed_Up_wolff.sh  launchnr1.sh  launchnr2.sh  launchnr3.sh  log-in.sh  run1.sh  run1wolff.sh  run2.sh  run2wolff.sh  run3.sh  run3wolff.sh  run4.sh  run_HeisenbergMPI.sh  run_Neq.sh  run_Seed.sh  run_Speed_Up.sh  run_Speed_Up_wolff.sh  run_on_euler.sh  seed1launch.sh  seed2launch.sh  seed3launch.sh  seed4launch.sh
docs/Euler/input/T_100000e-3/: MetropolisAdaptive_Lattice_0  MetropolisAdaptive_Lattice_1  MetropolisAdaptive_Lattice_10  MetropolisAdaptive_Lattice_11  MetropolisAdaptive_Lattice_12  MetropolisAdaptive_Lattice_13  MetropolisAdaptive_Lattice_14  MetropolisAdaptive_Lattice_15  MetropolisAdaptive_Lattice_16  MetropolisAdaptive_Lattice_17  MetropolisAdaptive_Lattice_18  MetropolisAdaptive_Lattice_19  MetropolisAdaptive_Lattice_2  MetropolisAdaptive_Lattice_20  MetropolisAdaptive_Lattice_21  MetropolisAdaptive_Lattice_22  MetropolisAdaptive_Lattice_23  MetropolisAdaptive_Lattice_24  MetropolisAdaptive_Lattice_25  MetropolisAdaptive_Lattice_26  MetropolisAdaptive_Lattice_27  MetropolisAdaptive_Lattice_28  MetropolisAdaptive_Lattice_29  MetropolisAdaptive_Lattice_3  MetropolisAdaptive_Lattice_30  MetropolisAdaptive_Lattice_31  MetropolisAdaptive_Lattice_32  MetropolisAdaptive_Lattice_33  MetropolisAdaptive_Lattice_34  MetropolisAdaptive_Lattice_35  MetropolisAdaptive_Lattice_36  MetropolisAdaptive_Lattice_37  MetropolisAdaptive_Lattice_38  MetropolisAdaptive_Lattice_39  MetropolisAdaptive_Lattice_4  MetropolisAdaptive_Lattice_40  MetropolisAdaptive_Lattice_41  MetropolisAdaptive_Lattice_42  MetropolisAdaptive_Lattice_43  MetropolisAdaptive_Lattice_44  (+104 more)
docs/Euler/input/T_10000e-3/: MetropolisAdaptive_0  MetropolisAdaptive_1  MetropolisAdaptive_10  MetropolisAdaptive_11  MetropolisAdaptive_12  MetropolisAdaptive_13  MetropolisAdaptive_14  MetropolisAdaptive_15  MetropolisAdaptive_16  MetropolisAdaptive_17  MetropolisAdaptive_18  MetropolisAdaptive_19  MetropolisAdaptive_2  MetropolisAdaptive_20  MetropolisAdaptive_21  (+177 more)
docs/Euler/launch1/: launch1.sh  launch2.sh  launch3.sh  launch4.sh
docs/Euler/launch2/: launch1.sh  launch2.sh  launch3.sh  launch4.sh
docs/Euler/launch3/: launch1.sh  launch2.sh  launch3.sh  launch4.sh
docs/Euler/launch4/: launch1.sh  launch2.sh  launch3.sh  launch4.sh
docs/Euler/launchL4/: .launchL4.swp  Daniels_Test.sh  launchL4
docs/Euler/output/: error.txt
docs/Metropolis/: Metorpolis.md
docs/scripts/: stichtime.jl
include/: Base.h++  Lattice3d.h++  Spin.h++  Timekeeper.h++  normalVectors.h++
include/Heffte/: heffte_config.h
include/Ippl/: IpplVersions.h
include/Ippl/Utility/: Timer.h
include/Kokkos/: KokkosCore_Config_DeclareBackend.hpp  KokkosCore_Config_FwdBackend.hpp  KokkosCore_Config_PostInclude.hpp  KokkosCore_config.h
lib/: libheffte.so.2  libheffte.so.2.4.0
libraries/: build-ippl-euler.sh
libraries/Ippl/: build-ippl-euler.sh  build-ippl.sh  ippl_build.sh
libraries/MPI/: mpi.h
libraries/matplotplusplus/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/matplotplusplus/source/: CTestTestfile.cmake  Makefile  cmake_install.cmake
programs/: heisenberg.c++  heisenbergIppl.c++  magnetization.c++  main.c++  test-ippl.c++  test-spin-features.c++  test.c++  to_delete.c++
programs/Ippl/: heisenbergIppl.c++  test-ippl.c++
programs/MPI/: HeisenbergMPI.c++  Lattice4MPI.c++  MPI_Neq.c++  MPI_ds.c++  MPI_metropolis_speed_up.c++  MPI_run_all.c++  MPI_seed.c++  MPI_temperatures.c++  Run_ds.c++
programs/gtests/: test-algorithm.c++  test-data.c++  test-latttice.c++
programs/omp/: get_metropolis_speed_up_data.c++  plot_speed_up_metropolis.c++  plot_speed_up_metropolis_adaptive.c++  plot_speed_up_wolff.c++  run_spead_ups.c++
programs/plot/: plot-lattices.c++  plot_dt.c++  plot_energy_and_magnetization.c++  plot_for_temperatures.c++  plot_speed_up_metropolis.c++  plot_speed_up_metropolis_adaptive.c++  plot_temperatures.c++  runsim.h++
programs/tests/: daniel.c++  loop_algorithm.c++  test-adaptive-metropolis.c++  test-algo-data.c++  test-all.c++  test-lattice.c++  test-metropolis.c++  test-plot.c++  test-wolff-ghost.c++  test-wolff.c++
test/: main.c++  test-ippl.c++  test.c++
(+2741 files in other folders)
